test/reject/10-abstract-final-class.puml
@startuml

abstract final class Bread {
    
}

@enduml